--- a/hmlr_frontend_jinja/templates/components/footer/macro.html
+++ b/hmlr_frontend_jinja/templates/components/footer/macro.html
@@ -1,23 +1,23 @@
 {% macro hmlrFooter(params) %}
 <footer class="govuk-footer govuk-footer--hmlr {{ params.classes if params.classes }}" role="contentinfo"
-        {%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor %}>
+        {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
   <div class="govuk-width-container {{ params.containerClasses if params.containerClasses }}">
-    {% if params.navigation | length %}
+    {% if 'navigation' in params and (params.navigation | length) %}
       <div class="govuk-footer__navigation">
         {% for nav in params.navigation %}
           <div class="govuk-footer__section govuk-grid-column-{{ nav.width | default('full') }}">
             <h2 class="govuk-footer__heading govuk-heading-m">{{ nav.title }}</h2>
-            {% if nav.items | length %}
+            {% if 'items' in nav and (nav['items'] | length) %}
               {% set listClasses %}
                 {% if nav.columns %}
                   govuk-footer__list--columns-{{ nav.columns }}
                 {% endif %}
               {% endset %}
               <ul class="govuk-footer__list {{ listClasses | trim }}">
-                {% for item in nav.items %}
+                {% for item in nav['items'] %}
                   {% if item.href and item.text %}
                     <li class="govuk-footer__list-item">
-                      <a class="govuk-footer__link" href="{{ item.href }}"{% for attribute, value in item.attributes %} {{attribute}}="{{value}}"{% endfor %}>
+                      <a class="govuk-footer__link" href="{{ item.href }}"{% for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
                         {{ item.text }}
                       </a>
                     </li>
@@ -32,13 +32,13 @@
     {% endif %}
     <div class="govuk-footer__meta">
       <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
-        {% if params.meta %}
+        {% if 'meta' in params %}
           <h2 class="govuk-visually-hidden">{{ params.meta.visuallyHiddenTitle | default("Support links") }}</h2>
-          {% if params.meta.items | length %}
+          {% if 'items' in params.meta and (params.meta['items'] | length) %}
             <ul class="govuk-footer__inline-list">
-              {% for item in params.meta.items %}
+              {% for item in params.meta['items'] %}
                 <li class="govuk-footer__inline-list-item">
-                  <a class="govuk-footer__link" href="{{ item.href }}"{% for attribute, value in item.attributes %} {{attribute}}="{{value}}"{% endfor %}>
+                  <a class="govuk-footer__link" href="{{ item.href }}"{% for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
                     {{ item.text }}
                   </a>
                 </li>
@@ -56,7 +56,7 @@
         <span
           class="govuk-footer__link govuk-footer__copyright-logo govuk-footer__copyright-logo--hmlr"
         >
-          {%- if params.copyright.html or params.copyright.text -%}
+          {%- if params.copyright and (params.copyright.html or params.copyright.text) -%}
             {{ params.copyright.html | safe if params.copyright.html else params.copyright.text }}
           {%- endif -%}
         </span>
