--- a/hmlr_frontend_jinja/templates/components/header/macro.html
+++ b/hmlr_frontend_jinja/templates/components/header/macro.html
@@ -1,8 +1,9 @@
 {% macro hmlrHeader(params) %}
 <header class="govuk-header govuk-header--hmlr {{ params.classes if params.classes }}" role="banner" data-module="govuk-header"
-        {%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor %}>
+        {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
   <div class="govuk-header__container {{ params.containerClasses | default('govuk-width-container') }}">
     <div class="govuk-header__content govuk-header__content--hmlr">
+    {% if params.serviceName %}
     {% if params.serviceUrl %}
       <a href="{{ params.serviceUrl }}" class="govuk-header__link govuk-header__service-name">
         {{ params.serviceName }}
@@ -11,6 +12,7 @@
       <span class="govuk-header__service-name">
         {{ params.serviceName }}
       </span>
+    {% endif %}
     {% endif %}
     </div>
   </div>
