--- a/hmlr_frontend_jinja/templates/components/footer/macro.html
+++ b/hmlr_frontend_jinja/templates/components/footer/macro.html
@@ -1,23 +1,22 @@
 {% macro hmlrFooter(params) %}
-  <footer class="govuk-footer govuk-footer--hmlr {{ params.classes if params.classes else '' }}" role="contentinfo"
-        {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
-  <div class="govuk-width-container {{ params.containerClasses if params.containerClasses else '' }}">
-    {% if 'navigation' in params and (params.navigation | length) %}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes -%}
+
+<footer class="govuk-footer govuk-footer--hmlr {%- if params.classes %} {{ params.classes }}{% endif %}"
+  {{- govukAttributes(params.attributes) }}>
+  <div class="govuk-width-container {%- if params.containerClasses %} {{ params.containerClasses }}{% endif %}">
+    {% if params.navigation | length %}
       <div class="govuk-footer__navigation">
         {% for nav in params.navigation %}
-          <div class="govuk-footer__section govuk-grid-column-{{ nav.width | default('full') }}">
+          <div class="govuk-footer__section govuk-grid-column-{{ nav.width | default("full", true) }}">
             <h2 class="govuk-footer__heading govuk-heading-m">{{ nav.title }}</h2>
-            {% if 'items' in nav and (nav['items'] | length) %}
-              {% set listClasses %}
-                {% if nav.columns %}
-                  govuk-footer__list--columns-{{ nav.columns }}
-                {% endif %}
-              {% endset %}
-              <ul class="govuk-footer__list {{ listClasses | trim }}">
+            {% if nav['items'] | length %}
+              {% set listClasses = "govuk-footer__list--columns-" ~ nav.columns if nav.columns %}
+              <ul class="govuk-footer__list {%- if listClasses %} {{ listClasses }}{% endif %}">
                 {% for item in nav['items'] %}
                   {% if item.href and item.text %}
                     <li class="govuk-footer__list-item">
-                      <a class="govuk-footer__link" href="{{ item.href }}"{% for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
+                      <a class="govuk-footer__link" href="{{ item.href }}"
+                        {{- govukAttributes(item.attributes) }}>
                         {{ item.text }}
                       </a>
                     </li>
@@ -33,32 +32,33 @@
     <div class="govuk-footer__meta">
       <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
         {% if 'meta' in params %}
-          <h2 class="govuk-visually-hidden">{{ params.meta.visuallyHiddenTitle | default("Support links") }}</h2>
-          {% if 'items' in params.meta and (params.meta['items'] | length) %}
-            <ul class="govuk-footer__inline-list">
-              {% for item in params.meta['items'] %}
-                <li class="govuk-footer__inline-list-item">
-                  <a class="govuk-footer__link" href="{{ item.href }}"{% for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
-                    {{ item.text }}
-                  </a>
-                </li>
-              {% endfor %}
-            </ul>
-          {% endif %}
-          {% if params.meta.text or params.meta.html %}
-            <div class="govuk-footer__meta-custom">
-              {{ params.meta.html | safe if params.meta.html else params.meta.text }}
-            </div>
-          {% endif %}
+        <h2 class="govuk-visually-hidden">{{ params.meta.visuallyHiddenTitle | default("Support links", true) }}</h2>
+        {% if 'items' in params.meta and (params.meta['items'] | length) %}
+        <ul class="govuk-footer__inline-list">
+        {% for item in params.meta['items'] %}
+          <li class="govuk-footer__inline-list-item">
+            <a class="govuk-footer__link" href="{{ item.href }}"
+              {{- govukAttributes(item.attributes) }}>
+              {{ item.text }}
+            </a>
+          </li>
+        {% endfor %}
+        </ul>
+        {% endif %}
+        {% if params.meta.text or params.meta.html %}
+        <div class="govuk-footer__meta-custom">
+          {{ params.meta.html | safe | trim | indent(10) if params.meta.html else params.meta.text }}
+        </div>
+        {% endif %}
         {% endif %}
       </div>
       <div class="govuk-footer__meta-item">
         <a
           class="govuk-footer__link govuk-footer__copyright-logo govuk-footer__copyright-logo--hmlr"
         >
-          {%- if params.copyright and (params.copyright.html or params.copyright.text) -%}
-            {{ params.copyright.html | safe if params.copyright.html else params.copyright.text }}
-          {%- endif -%}
+        {% if params.copyright and (params.copyright.html or params.copyright.text) %}
+          {{ params.copyright.html | safe | trim | indent(10) if params.copyright.html else params.copyright.text }}
+        {% endif %}
         </a>
       </div>
     </div>
