updated svg and attributes macro

--- a/hmlr_frontend_jinja/templates/components/header/macro.html
+++ b/hmlr_frontend_jinja/templates/components/header/macro.html
@@ -1,56 +1,258 @@
 {% macro hmlrHeader(params) %}
-{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes %}
+{% from "hmlr_frontend_jinja/macros/attributes.html" import hmlrAttributes -%}
+
+{%- set _rebrand = params.rebrand | default(govukRebrand() if govukRebrand and govukRebrand is callable else govukRebrand) -%}
 
 {%- set menuButtonText = params.menuButtonText if params.menuButtonText else 'Menu' -%}
 
 <header class="govuk-header {%- if params.classes %} {{ params.classes }}{% endif %}" data-module="govuk-header"
-  {{- govukAttributes(params.attributes) }}>
+  {{- hmlrAttributes(params.attributes) }}>
   <div class="govuk-header__container {{ params.containerClasses | default("govuk-width-container", true) }}">
     <div class="govuk-header__logo">
       <a href="{{ params.homepageUrl | default("/", true) }}" class="govuk-header__link govuk-header__link--homepage">
         <svg
           focusable="false"
           role="img"
-          class="govuk-header__logotype"
           xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 178.82 57.2"
+          viewBox="0 0 2048 278"
           height="30"
-          width="94"
-          aria-label="HM Land Registry"
-        >
+          width="221"
+          fill="currentcolor" class="govuk-header__logotype" aria-label="HM Land Registry">
           <title>HM Land Registry</title>
           <path
-            d="m129.71 14.17-2.73-4.72 2.73-4.73h5.45l2.73 4.73-2.73 4.72h-5.45zm-8.19 14.18-2.73-4.73 2.73-4.72h5.46l2.73 4.72-2.73 4.73h-5.46zm40.93-14.18-2.73-4.73 2.73-4.72h5.46l2.72 4.72-2.73 4.73h-5.45zm8.19 14.18-2.73-4.73 2.73-4.72h5.45l2.73 4.72-2.73 4.73h-5.45zm-32.75 28.36-2.73-4.73 2.73-4.73h5.46l2.73 4.73-2.73 4.73h-5.46zm16.37 0-2.72-4.73 2.72-4.73h5.46l2.73 4.73-2.73 4.73h-5.46zm-8.18-33.09-2.73-4.72 2.73-4.73h5.46l2.72 4.73-2.73 4.72h-5.45z"
-            fill="#b2b2b2"
+            transform="translate(1849,3)"
+            d="m0 0h28l10 18 2 3h26l12-21h27l10 17 2 5h27l12 21-1 5-10 17 1 5 10 18 1 1 26 1 12 20-1 5-10 17 1 6 10 17v3l-12 21-26 1-6 9-6 11 1 5 10 17-1 5-11 19-26 1-10 17-3 5h-26l-6-9-7-13h-26l-12 21-1 1h-26l-10-17-3-5-26-1-8-13-4-7 1-6 10-17-1-5-11-18-26-1-12-21 1-5 10-17-1-5-10-17 1-6 10-17 1-1 26-1 12-21-2-6-10-17 6-11 7-12 26-1 10-17z"
+            fill="#C1CE0C"
           />
           <path
-            d="m146.08 33.07-2.73-4.72 2.73-4.73h5.46l2.72 4.73-2.73 4.72h-5.45z"
-            fill="#fff"
+            transform="translate(1849,3)"
+            d="m0 0h28l10 18 2 3 25 1v1h-26l-2 5-8 15 1 5 11 19-12 21 1 5 10 17-1 5-11 19-1 1h-26l-2 5-10 17-27 1-11 19-2 3-26-1-12-21 1-5 10-17-1-5-10-17 1-6 10-17 1-1 26-1 12-21-2-6-10-17 6-11 7-12 26-1 10-17z"
+            fill="#C1CE0C"
           />
           <path
-            d="m137.89 37.8-2.73-4.72 2.73-4.73h5.46l2.73 4.73-2.73 4.72h-5.46zm16.37 0-2.72-4.72 2.72-4.73h5.46l2.73 4.73-2.73 4.72h-5.46z"
-            fill="#b2b2b2"
+            transform="translate(1888,159)"
+            d="m0 0h27l5 8 7 12v2h27l13 22 26 2 12 20-1 5-11 19-26 1-10 17-3 5h-26l-6-9-7-13h-26l-12 21-1 1h-26l-10-17-3-5-26-1-8-13-4-7 1-6 11-19h25l6-9 8-14h25l8-13z"
+            fill="#C1CE0C"
           />
           <path
-            fill="#76b82a"
-            d="m129.71 23.62-2.73-4.72 2.73-4.73h5.45l2.73 4.73-2.73 4.72h-5.45zm16.37-9.45-2.73-4.72 2.73-4.73h5.46l2.72 4.73-1 1.73-1.73 2.99h-5.45zm-16.37 28.36-2.73-4.73 2.73-4.72h-.01 5.46l2.73 4.72-2.73 4.73h-5.45zm32.74-18.91-2.73-4.72 2.73-4.73h5.46l2.72 4.73-2.73 4.72h-5.45zm-16.37 28.36-2.73-4.73 2.73-4.72h5.46l2.72 4.72-2.73 4.73h-5.45zm16.37-9.45-2.73-4.73 2.73-4.72h5.46l2.72 4.72-2.73 4.73h-5.45z"
+            transform="translate(1914,25)"
+            d="m0 0 3 3 10 18-1 5-11 19 6 11 6 10-1 4-10 18 1 6 9 15 2 3 25 1 6 9 7 12 27 1 12 21-1 4-11 20h-15l-11-1-6-9-7-12-1-1h-24l-3-3-11-19-27-1-2 5-9 16-2 2h-24l-6 9-7 12-3 2-24-1-8-13-4-7 1-5 11-19 27-1 10-18 2-3 26-1 12-20-1-5-10-18 1-5 11-18-12-22 1-5 10-18z"
+            fill="#7FB634"
           />
           <path
-            fill="#bccf00"
-            d="m137.89 9.45-2.73-4.73L137.89 0h5.46l2.73 4.72-2.73 4.73h-5.46zm16.37-.01-2.72-4.72L154.26 0h5.46l2.73 4.72-2.73 4.72h-5.46zM121.52 37.8l-2.73-4.72 2.73-4.73h5.46l2.72 4.73-2.72 4.72h-5.46zm8.19 14.18-2.73-4.73 2.73-4.72h5.45l2.73 4.72-2.73 4.73h-5.45zm40.93-14.18-2.73-4.72 2.73-4.73h5.45l2.73 4.73-2.73 4.72h-5.45zm-8.19 14.18-2.73-4.73 2.73-4.72h5.46l2.72 4.72-2.73 4.73h-5.45zm-19.1-23.63h-5.46l-2.73-4.73 2.73-4.72h5.46l2.73 4.72-2.73 4.73zm16.37 0h-5.46l-2.72-4.73 2.72-4.72h5.46l2.73 4.72-2.73 4.73zm-13.64 14.18-2.73-4.73 2.73-4.72h5.46l2.72 4.72-2.73 4.73h-5.45z"
+            transform="translate(146,40)"
+            d="m0 0h22l8 16 22 45 11 23 12 25v2h2l1-5 15-31 13-28 19-40 3-7h23v172l-5 1h-12l-1-1-1-142-19 41-14 30-12 27-2 10-1 19h-18l-1-22-4-13-18-38-14-30-11-24-1 142-1 1h-16z"
+            fill="#FDFDFD"
           />
           <path
-            fill="#f2e500"
-            d="M143.35 18.9h-5.46l-2.73-4.73 2.73-4.72h5.46l2.73 4.72-2.73 4.73zm-13.64 14.18-2.73-4.73 2.73-4.73h5.45l2.73 4.73-2.73 4.73h-5.45zm30.01-14.18h-5.46l-2.72-4.73 1.72-2.99 1-1.73v-.01h5.46l2.73 4.73-2.73 4.73zm-16.37 28.35h-5.46l-2.73-4.72 2.73-4.73h5.46l2.73 4.73-2.73 4.72zm19.1-14.17-2.73-4.73 2.73-4.73h5.46l2.72 4.73-2.73 4.73h-5.45zm-2.73 14.17h-5.46l-2.72-4.72 2.72-4.73h5.46l2.73 4.73-2.73 4.72z"
+            transform="translate(881,43)"
+            d="m0 0h55l13 2 11 7 13 12 5 10v41l-5 10-14 12-3 2 2 5 15 28 7 14 1 6v24h-19l-2-25-8-16-15-29-48-1v71h-18v-163zm8 16v70h49l7-3 10-8 3-5 1-4v-30l-3-7-8-8-10-5z"
+            fill="#FDFDFD"
           />
           <path
-            d="M12.11 21.59V11.17H2.22v10.42H0V.4h2.22v8.82h9.89V.4h2.22v21.19h-2.22Zm21.81 0V3.66l-5.48 11.81c-.27.56-.5 1.36-.5 2.25v1.92h-2.22v-1.92c0-.95-.27-1.72-.5-2.25L19.68 3.66V21.6h-2.1V.4h2.69l6.63 13.82L33.42.4h2.69v21.19h-2.19Zm10.39 0V.4h2.22v19.24h8.35v1.95H44.31Zm22.52 0h-6.66c-.98 0-1.78-.33-2.34-.83l-.8-.74c-.71-.65-.98-1.24-.98-2.16v-1.72c0-.92.27-1.51.98-2.16l.89-.8c.59-.53 1.39-.77 2.37-.77h5.48v-1.48c0-.62-.35-1.04-.77-1.39l-.5-.44c-.68-.59-1.01-.71-1.89-.71h-5v-1.8h5.83c1.07 0 1.69.32 2.22.77l1.21 1.07c.92.8 1.1 1.3 1.1 2.37v9.59l-1.12 1.21Zm-1.07-7.37h-4.97c-.68 0-1.1.09-1.48.42l-.56.47c-.33.3-.56.59-.56 1.07v1.66c0 .44.21.77.53 1.04l.68.56c.3.24.71.35 1.39.35h4.97v-5.56Zm14.84 7.37v-9.56c0-1.01-.35-1.54-1.06-2.19l-.62-.56c-.47-.44-1.07-.83-2.16-.83h-3.79v13.14h-2.19V7.8l1.12-1.21h5.92c1.04 0 1.66.24 2.25.77l1.89 1.72c.56.53.83.95.83 1.83V21.6H80.6Zm15.89 0h-6.13c-.89 0-1.69-.24-2.66-1.04l-1.48-1.21c-.59-.5-.92-1.18-.92-2.57v-5.36c0-1.39.33-2.07.92-2.58l1.48-1.21c.98-.8 1.75-1.04 2.63-1.04h5.09V.4h2.19v19.98l-1.12 1.21ZM95.42 8.45h-4.08c-1.04 0-1.6.27-2.13.68l-.8.59c-.36.27-.92.89-.92 2.1v4.53c0 1.21.56 1.83.92 2.1l.8.59c.53.41 1.1.68 2.13.68h4.08V8.44ZM11.07 50.98v-2.07c0-.59-.09-1.21-.47-1.89l-2.58-4.83H2.16v8.79H0V31l1.18-1.21h6.51c2.16 0 2.58.65 4.11 1.98.98.83 1.24 1.51 1.24 2.49v3.55c0 1.01-.27 1.69-1.27 2.49l-1.57 1.27 2.69 4.91c.41.77.5 1.57.5 2.31v2.19h-2.34Zm-.3-16.31c0-.8-.27-1.36-.77-1.78l-.77-.68c-.5-.41-.92-.56-2.13-.56H2.16v8.67H7.1c1.21 0 1.63-.15 2.13-.56l.77-.65c.5-.41.77-1.01.77-1.81v-2.63Zm16.35 9.47h-8.88v1.63c0 1.21.47 1.83.83 2.1l.74.56c.53.39 1.01.68 2.01.68h5.59v1.87h-6.6c-.83 0-1.54-.24-2.49-1.04l-1.42-1.21c-.56-.5-.83-1.18-.83-2.58v-5.56c0-1.39.27-2.07.83-2.58l1.42-1.21c.95-.8 1.66-1.04 2.49-1.04h2.66c.83 0 1.54.24 2.49 1.04l1.42 1.21c.56.5.86 1.18.86 2.58v2.37l-1.12 1.18Zm-1.01-3.34c0-1.21-.5-1.83-.86-2.1l-.74-.59c-.5-.41-1.01-.71-2.01-.71h-.68c-1.01 0-1.51.29-2.01.71l-.74.59c-.35.27-.83.89-.83 2.1v1.57h7.87V40.8Zm16.03 14.53-1.24 1.1c-.53.44-1.15.77-2.22.77h-6.42v-1.87h5.56c.89 0 1.18-.15 1.89-.71l.56-.44c.41-.33.77-.77.77-1.39v-1.81h-5.06c-.89 0-1.69-.24-2.66-1.04l-1.48-1.21c-.59-.5-.92-1.18-.92-2.58v-5.36c0-1.39.33-2.07.92-2.58L33.32 37c.98-.8 1.75-1.04 2.64-1.04h7.28v16.99c0 1.07-.18 1.54-1.1 2.37Zm-1.09-17.49h-4.08c-1.04 0-1.6.27-2.13.68l-.8.59c-.35.27-.92.89-.92 2.1v4.53c0 1.21.56 1.84.92 2.1l.8.59c.53.41 1.09.68 2.13.68h4.08V37.83Zm4.85-4.24v-2.81h2.31v2.81H45.9Zm.06 17.38V35.97h2.19v15.01h-2.19Zm16.41-1.48-1.18.92c-.44.33-1.15.56-1.95.56h-8.05v-1.87h7.55c.65 0 1.01-.12 1.33-.35l.5-.39c.27-.21.53-.62.53-1.07v-1.16c0-.98-.47-1.42-1.78-1.54l-5.33-.53c-2.28-.24-3.11-1.51-3.11-3.05v-1.6c0-1.09.33-1.63.8-1.98l1.18-.92c.44-.33 1.15-.56 1.95-.56h7.43v1.87h-6.93c-.65 0-1.01.12-1.33.35l-.5.38c-.27.21-.53.62-.53 1.07v.92c0 .92.47 1.36 1.72 1.48l5.03.5c2.55.27 3.46 1.36 3.46 3.02v1.95c0 1.1-.33 1.63-.8 1.98Zm8 1.48c-1.07 0-1.75-.24-2.28-.68l-1.21-1.07c-.89-.8-1.04-1.33-1.04-2.43V32.71h2.19v3.25h4.65v1.87h-4.65v8.76c0 .5.18 1.01.86 1.6l.36.3c.68.56 1.07.62 1.95.62h1.48v1.87h-2.31Zm7.17-13.14v13.14h-2.19V37.19l1.12-1.21h6.45v1.87h-5.39Zm18.98 17.49-1.24 1.1c-.53.44-1.15.77-2.22.77h-6.57v-1.87h5.71c.89 0 1.18-.15 1.89-.71l.56-.44c.41-.33.77-.77.77-1.39v-1.81h-4.85c-1.04 0-1.66-.24-2.25-.77l-1.89-1.72c-.56-.53-.83-.95-.83-1.84V35.96h2.19v9.56c0 1.01.36 1.54 1.06 2.19l.62.56c.47.44 1.06.83 2.16.83h3.79V35.96h2.19v16.99c0 1.07-.18 1.54-1.1 2.37Z"
-            fill="#fff"
+            transform="translate(1157,94)"
+            d="m0 0h67v145l-4 8-10 10-8 6-6 3-6 1h-55l-1-1v-14l1-1 51-1 8-4 9-8 2-5 1-17h-48l-10-4-9-7-10-8-4-6-2-8v-55l2-9 6-8 10-8 9-6zm11 15-9 3-12 9-5 8v52l5 8 12 9 9 3h38v-91l-1-1z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(3,40)"
+            d="m0 0h18v72h80v-72h18v173h-17l-1-1v-84h-80v84l-1 1h-17z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(1569,94)"
+            d="m0 0h18l1 80 3 9 7 8 8 6 9 3 34 1v-106l1-1h17v147l-6 9-11 10-8 5-8 2h-57l-1-1v-14l1-1 53-1 10-6 5-4 3-5 1-19h-47l-9-4-16-15-5-5-3-7z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(780,40)"
+            d="m0 0h17v164l-9 9h-53l-8-2-9-5-13-11-5-5-3-9v-59l3-9 5-5 10-9 11-7 8-2h45v-44zm-41 66-7 3-11 8-4 5-2 6v47l4 9 11 9 9 4h40v-91z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(472,90)"
+            d="m0 0h51l10 3 10 8 9 8 4 8v87h-2l-2 4-5 5h-58l-8-2-8-5-8-7-5-8-1-3v-26l4-8 9-9 7-5 6-2h53l-1-15-3-5-8-8-5-3-4-1-46-1v-14zm18 63-8 6-5 5v22l4 5 9 6 4 1h44v-45z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(1036,92)"
+            d="m0 0h32l10 4 11 9 9 8 3 7 1 5v26l-8 9-2 1h-72l1 17 3 9 8 7 6 4 8 2 49 1v15h-61l-10-5-14-12-6-7-2-10v-56l2-9 4-6 11-10 11-7zm6 14-8 4-11 10-3 9v17h64v-19l-4-8-10-9-8-4z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(1311,94)"
+            d="m0 0h68v15l-61 1-8 4-5 5-1 3v11l2 5 4 3 10 2 40 4 13 3 8 5 5 8 1 5v24l-3 9-8 7-9 6-6 2h-72l-1-1v-14l66-1 7-3 6-5 2-8-1-12-2-4-10-3-49-5-11-4-7-7-3-9v-24l3-7 10-9 9-5z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(588,90)"
+            d="m0 0h53l10 3 12 11 8 7 4 5 2 5v91l-1 1h-17l-1-81-3-9-12-12-9-4-37-1v106l-1 1h-17l-1-112 7-8z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(1889,204)"
+            d="m0 0h25l5 8 9 15h25l13 21v3l-12 21h-26l-6-9-7-13h-26l-12 21-1 1h-26l-10-17-2-3 1-5 10-18 2-2h25z"
+            fill="#7FB633"
+          />
+          <path
+            transform="translate(1967,25)"
+            d="m0 0h26l12 21-1 5-10 17 1 5 10 18 1 1 26 1 12 20-1 5-10 17-2 3-25-1-6-9-7-13-27-1-8-13-4-7 2-6 10-17-2-5-6-11-3-5 1-6z"
+            fill="#7FB633"
+          />
+          <path
+            transform="translate(1811,25)"
+            d="m0 0h26l12 21-1 5-10 17 1 5 10 18-1 6-9 16-1 1-27 1-12 21-1 1h-26l-12-20 1-6 10-17 1-1 26-1 12-21-2-6-10-17 6-11z"
+            fill="#7FB633"
+          />
+          <path
+            transform="translate(363,40)"
+            d="m0 0h18l1 1v156h67v16h-85l-1-1z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(1408,67)"
+            d="m0 0h18v27h38v15l-37 1v73l4 8 11 8 5 1 17 1v15h-27l-8-3-13-11-6-7-2-6z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(1967,115)"
+            d="m0 0h27l11 20 1 1 25 1 6 9 7 12v3l-12 21-27 1-12-22-27-1-12-20 1-6 10-17z"
+            fill="#C1CE0C"
+          />
+          <path
+            transform="translate(1953,181)"
+            d="m0 0 4 5 10 17 26 2 12 20-1 5-11 19h-27l-6-9-7-12h-26l-12-22 1-5 10-16 1-3z"
+            fill="#C1CE0C"
+          />
+          <path
+            transform="translate(1927,137)"
+            d="m0 0 26 1 6 9 7 12 27 1 12 21-1 4-11 20h-15l-11-1-6-9-7-12-1-1h-24l-3-3-11-19 3-7z"
+            fill="#7FB633"
+          />
+          <path
+            transform="translate(1876,137)"
+            d="m0 0 3 4 8 14 2 4-12 21-2 2h-24l-6 9-7 12-3 2-24-1-8-13-4-7 1-5 11-19 27-1 10-18 2-3z"
+            fill="#7FB633"
+          />
+          <path
+            transform="translate(1494,94)"
+            d="m0 0h54v15h-44v107h-18l-1-1v-110l7-9z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(1246,94)"
+            d="m0 0h18v122h-18z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(1927,92)"
+            d="m0 0h27l12 21 27 1v1l-26 1-10 16-3 7-26-1-6-9-7-12 1-6z"
+            fill="#C1CE0D"
+          />
+          <path
+            transform="translate(1849,3)"
+            d="m0 0h28l10 18 2 3 25 1v1h-26l-2 5-8 15v5l-2-1v-2l-25 1-2 1-3-8-9-15 1-4z"
+            fill="#C1CE0C"
+          />
+          <path
+            transform="translate(1798,136)"
+            d="m0 0 2 3 10 17 3 2 25 1v1l-27 1-11 19-2 3-26-1-12-21 1-5 11-19z"
+            fill="#C1CE0C"
+          />
+          <path
+            transform="translate(1888,159)"
+            d="m0 0h27l5 8 7 12v2l2 1h-2l-1 4-11 19-26-1-1 2-3-8-10-16 8-14z"
+            fill="#C1CE0D"
+          />
+          <path
+            transform="translate(1851,48)"
+            d="m0 0h25l4 5 10 17-8 14-5 8h-27l-3-3-10-18 1-4 9-16z"
+            fill="#F0E20B"
+          />
+          <path
+            transform="translate(1928,48)"
+            d="m0 0h26v2h2l11 19-2 5-10 18h-28l-10-16-3-6 12-21z"
+            fill="#F1E20B"
+          />
+          <path
+            transform="translate(1850,181)"
+            d="m0 0 26 1 8 13 4 7v6l-11 19-2 1-26-2-11-19 1-7z"
+            fill="#F1E20B"
+          />
+          <path
+            transform="translate(1953,181)"
+            d="m0 0 4 5 9 16-1 6-10 18-26 1-2 1-12-22 1-5 10-16 1-3z"
+            fill="#F1E20B"
+          />
+          <path
+            transform="translate(1812,115)"
+            d="m0 0h25l6 9 7 12-1 5-10 18h-26l-5-4-9-16 1-7 9-15z"
+            fill="#F1E20B"
+          />
+          <path
+            transform="translate(1967,115)"
+            d="m0 0h27l11 20-1 5-9 16-3 3h-27l-11-19 1-6 10-17z"
+            fill="#F2E20B"
+          />
+          <path
+            transform="translate(1928,227)"
+            d="m0 0h25l13 21v3l-12 21h-26l-6-9-7-14 12-21z"
+            fill="#B0B2B2"
+          />
+          <path
+            transform="translate(1851,227)"
+            d="m0 0h24l4 5 10 16-2 6-10 17-1 1h-26l-10-17-2-3 1-5 10-18z"
+            fill="#B0B2B2"
+          />
+          <path
+            transform="translate(1811,25)"
+            d="m0 0h26l12 21-1 5-11 19h-26l-13-22 6-11z"
+            fill="#B0B2B2"
+          />
+          <path
+            transform="translate(1967,25)"
+            d="m0 0h26l12 21-1 5-11 19h-26l-12-20 1-6z"
+            fill="#B0B2B2"
+          />
+          <path
+            transform="translate(1890,114)"
+            d="m0 0h24l12 20 1 5-10 17-1 3h-27l-7-11-5-9 1-5 11-19z"
+            fill="#FDFDFD"
+          />
+          <path
+            transform="translate(2e3 92)"
+            d="m0 0 27 1 12 20-1 5-10 17-2 3-25-1-6-9-7-13 2-5z"
+            fill="#B0B2B2"
+          />
+          <path
+            transform="translate(1772,93)"
+            d="m0 0h27l12 21-6 12-7 11h-26l-12-20 1-6 10-17z"
+            fill="#B0B2B2"
+          />
+          <path
+            transform="translate(1876,137)"
+            d="m0 0 3 4 8 14 2 4-12 21-2 2h-24l-4-5-9-16 2-6 10-17z"
+            fill="#B0B2B2"
+          />
+          <path
+            transform="translate(1927,137)"
+            d="m0 0 26 1 6 9 7 12-2 5-10 17-1 1h-24l-3-3-11-19 3-7z"
+            fill="#B0B2B2"
+          />
+          <path
+            transform="translate(1890,70)"
+            d="m0 0h24l10 16 3 5-1 4-11 20h-26l-12-21 1-5 11-18z"
+            fill="#B0B2B2"
+          />
+          <path
+            transform="translate(1245,52)"
+            d="m0 0h20v22l-1 1h-18l-1-1z"
+            fill="#FDFDFD"
           />
         </svg>
         {% if (params.productName) %}
         <span class="govuk-header__product-name">
-          {{ params.productName }}
+          {{- params.productName -}}
         </span>
         {% endif %}
       </a>
@@ -80,7 +282,7 @@
           <li class="govuk-header__navigation-item {%- if item.active %} govuk-header__navigation-item--active{% endif %}">
             {% if item.href %}
             <a class="govuk-header__link" href="{{ item.href }}"
-              {{- govukAttributes(item.attributes) -}}>
+              {{- hmlrAttributes(item.attributes) -}}>
             {% endif %}
               {{ item.html | safe | trim | indent(14) if item.html else item.text }}
             {% if item.href %}
